Use dropdown buttons to replace cycle buttons

--- a/example_config_files/k4macro.yaml
+++ b/example_config_files/k4macro.yaml
@@ -46,7 +46,7 @@
 
     - item: group
       contains:
-      #include power_cycle
+      #include power_dropdown
 
     #include power_slider
     #include main_volume_slider
@@ -72,17 +72,18 @@
   #include VFO_A
   - item: group
     columns: 3
+    childwidth: 7
     contains:
-    #include band_A_cycle
-    #include mode_A_cycle
-    #include bw_A_cycle
-    #include preamp_A_cycle
-    #include atten_A_cycle
-    #include rfgain_A_cycle
+    #include band_A_dropdown
+    #include mode_A_dropdown
+    #include bw_A_dropdown
+    #include preamp_A_dropdown
+    #include atten_A_dropdown
+    #include rfgain_A_dropdown
 #end
 
 #define VFO_A
-- { item: vfo, AorB: A, font: { family: Helvetica, size: 19, weight: normal } }
+- { item: vfo, AorB: A, width: 9, font: { family: Helvetica, size: 19, weight: normal } }
 - item: group
   button_font: { family: Helvetica, size: 6, weight: normal }
   columns: 1
@@ -100,53 +101,92 @@
     text: "S1  2  3  4  5  6  7  8  9    +10   +20   +30  +40   +50  +60"
 #end
 
-#define band_A_cycle
-- item: cyclebutton
-  wraparound: true
-  updown: true
-  selections:
-  - { text: "+  Band\n-  160 m", cmd: BN00;, justify: left }
-  - { text: "+  Band\n-   80 m", cmd: BN01;, justify: left }
-  - { text: "+  Band\n-   60 m", cmd: BN02;, justify: left }
-  - { text: "+  Band\n-   40 m", cmd: BN03;, justify: left }
-  - { text: "+  Band\n-   30 m", cmd: BN04;, justify: left }
-  - { text: "+  Band\n-   20 m", cmd: BN05;, justify: left }
-  - { text: "+  Band\n-   17 m", cmd: BN06;, justify: left }
-  - { text: "+  Band\n-   15 m", cmd: BN07;, justify: left }
-  - { text: "+  Band\n-   12 m", cmd: BN08;, justify: left }
-  - { text: "+  Band\n-   10 m", cmd: BN09;, justify: left }
-  - { text: "+  Band\n-    6 m", cmd: BN10;, justify: left }
+#define band_A_dropdown
+- item: group
+  label: Band
+  contains:
+  - item: dropdownbutton
+    selections:
+    - { text: "160 m", cmd: BN00; }
+    - { text: " 80 m", cmd: BN01; }
+    - { text: " 60 m", cmd: BN02; }
+    - { text: " 40 m", cmd: BN03; }
+    - { text: " 30 m", cmd: BN04; }
+    - { text: " 20 m", cmd: BN05; }
+    - { text: " 17 m", cmd: BN06; }
+    - { text: " 15 m", cmd: BN07; }
+    - { text: " 12 m", cmd: BN08; }
+    - { text: " 10 m", cmd: BN09; }
+    - { text: "  6 m", cmd: BN10; }
 #end
 
-#define mode_A_cycle
-- item: cyclebutton
-  wraparound: true
-  updown: true
-  selections:
-  - { text: "+ Mode\n-   CW ", cmd: MD3;, justify: left }
-  - { text: "+ Mode\n-  USB ", cmd: MD2;, justify: left }
-  - { text: "+ Mode\n-  LSB ", cmd: MD1;, justify: left }
-  - { text: "+ Mode\n-   AM ", cmd: MD5;, justify: left }
-  - { text: "+ Mode\n-   FM ", cmd: MD4;, justify: left }
-  - { text: "+ Mode\n-  DATA", cmd: MD6;, justify: left }
+#define mode_A_dropdown
+- item: group
+  label: Mode
+  contains:
+  - item: dropdownbutton
+    selections:
+    - { text: "  CW", cmd: MD3; }
+    - { text: " USB", cmd: MD2; }
+    - { text: " LSB", cmd: MD1; }
+    - { text: "  AM", cmd: MD5; }
+    - { text: "  FM", cmd: MD4; }
+    - { text: "DATA", cmd: MD6; }
 #end
 
-#define bw_A_cycle
-- item: cyclebutton
-  wraparound: true
-  updown: true
-  selections:
-  - { text: "+    BW\n-    50 Hz", cmd: BW0005;, justify: left }
-  - { text: "+    BW\n-   100 Hz", cmd: BW0010;, justify: left }
-  - { text: "+    BW\n-   200 Hz", cmd: BW0020;, justify: left }
-  - { text: "+    BW\n-   300 Hz", cmd: BW0030;, justify: left }
-  - { text: "+    BW\n-   400 Hz", cmd: BW0040;, justify: left }
-  - { text: "+    BW\n-   450 Hz", cmd: BW0045;, justify: left }
-  - { text: "+    BW\n-   500 Hz", cmd: BW0050;, justify: left }
-  - { text: "+    BW\n-  1.8 kHz", cmd: BW0180;, justify: left }
-  - { text: "+    BW\n-  2.5 kHz", cmd: BW0250;, justify: left }
-  - { text: "+    BW\n-  3.5 kHz", cmd: BW0350;, justify: left }
-  - { text: "+    BW\n-  4.0 kHz", cmd: BW0400;, justify: left }
+#define bw_A_dropdown
+- item: group
+  label: BW
+  contains:
+  - item: dropdownbutton
+    selections:
+    - { text: "  50 Hz", cmd: BW0005; }
+    - { text: " 100 Hz", cmd: BW0010; }
+    - { text: " 200 Hz", cmd: BW0020; }
+    - { text: " 300 Hz", cmd: BW0030; }
+    - { text: " 400 Hz", cmd: BW0040; }
+    - { text: " 450 Hz", cmd: BW0045; }
+    - { text: " 500 Hz", cmd: BW0050; }
+    - { text: "1.8 kHz", cmd: BW0180; }
+    - { text: "2.5 kHz", cmd: BW0250; }
+    - { text: "3.5 kHz", cmd: BW0350; }
+    - { text: "4.0 kHz", cmd: BW0400; }
+#end
+
+#define preamp_A_dropdown
+- item: group
+  label: Preamp
+  contains:
+  - item: dropdownbutton
+    selections:
+    - { text: "0", cmd: PA00;, justify: left }
+    - { text: "1", cmd: PA11;, justify: left }
+    - { text: "2", cmd: PA21;, justify: left }
+    - { text: "3", cmd: PA31;, justify: left }
+#end
+
+#define atten_A_dropdown
+- item: group
+  label: Atten
+  contains:
+  - item: dropdownbutton
+    selections:
+    - { text: " 0 dB", cmd: RA000;, justify: left }
+    - { text: " 3 dB", cmd: RA031;, justify: left }
+    - { text: " 6 dB", cmd: RA061;, justify: left }
+    - { text: "12 dB", cmd: RA121;, justify: left }
+    - { text: "15 dB", cmd: RA151;, justify: left }
+    - { text: "18 dB", cmd: RA181;, justify: left }
+#end
+
+#define rfgain_A_dropdown
+- item: group
+  label: RF Gain
+  contains:
+  - item: dropdownbutton
+    selections:
+    - { text: " -0 ", cmd: RG-00; }
+    - { text: "-10 ", cmd: RG-10; }
 #end
 
 #define VFO_B_widgets
@@ -157,17 +197,18 @@
   #include VFO_B
   - item: group
     columns: 3
+    childwidth: 7
     contains:
-    #include band_B_cycle
-    #include mode_B_cycle
-    #include bw_B_cycle
-    #include preamp_A_cycle
-    #include atten_A_cycle
-    #include rfgain_A_cycle
+    #include band_B_dropdown
+    #include mode_B_dropdown
+    #include bw_B_dropdown
+    #include preamp_B_dropdown
+    #include atten_B_dropdown
+    #include rfgain_B_dropdown
 #end
 
 #define VFO_B
-- { item: vfo, AorB: B, font: { family: Helvetica, size: 19, weight: normal } }
+- { item: vfo, AorB: B, width: 9, font: { family: Helvetica, size: 19, weight: normal } }
 - item: group
   button_font: { family: Helvetica, size: 6, weight: normal }
   columns: 1
@@ -185,53 +226,92 @@
     text: "S1  2  3  4  5  6  7  8  9    +10   +20   +30  +40   +50  +60"
 #end
 
-#define band_B_cycle
-- item: cyclebutton
-  wraparound: true
-  updown: true
-  selections:
-  - { text: "+  Band\n-  160 m", cmd: BN$00;, justify: left }
-  - { text: "+  Band\n-   80 m", cmd: BN$01;, justify: left }
-  - { text: "+  Band\n-   60 m", cmd: BN$02;, justify: left }
-  - { text: "+  Band\n-   40 m", cmd: BN$03;, justify: left }
-  - { text: "+  Band\n-   30 m", cmd: BN$04;, justify: left }
-  - { text: "+  Band\n-   20 m", cmd: BN$05;, justify: left }
-  - { text: "+  Band\n-   17 m", cmd: BN$06;, justify: left }
-  - { text: "+  Band\n-   15 m", cmd: BN$07;, justify: left }
-  - { text: "+  Band\n-   12 m", cmd: BN$08;, justify: left }
-  - { text: "+  Band\n-   10 m", cmd: BN$09;, justify: left }
-  - { text: "+  Band\n-    6 m", cmd: BN$10;, justify: left }
+#define band_B_dropdown
+- item: group
+  label: Band
+  contains:
+  - item: dropdownbutton
+    selections:
+    - { text: "160 m", cmd: BN$00; }
+    - { text: " 80 m", cmd: BN$01; }
+    - { text: " 60 m", cmd: BN$02; }
+    - { text: " 40 m", cmd: BN$03; }
+    - { text: " 30 m", cmd: BN$04; }
+    - { text: " 20 m", cmd: BN$05; }
+    - { text: " 17 m", cmd: BN$06; }
+    - { text: " 15 m", cmd: BN$07; }
+    - { text: " 12 m", cmd: BN$08; }
+    - { text: " 10 m", cmd: BN$09; }
+    - { text: "  6 m", cmd: BN$10; }
 #end
 
-#define mode_B_cycle
-- item: cyclebutton
-  wraparound: true
-  updown: true
-  selections:
-  - { text: "+ Mode\n-   CW ", cmd: MD$3;, justify: left }
-  - { text: "+ Mode\n-  USB ", cmd: MD$2;, justify: left }
-  - { text: "+ Mode\n-  LSB ", cmd: MD$1;, justify: left }
-  - { text: "+ Mode\n-   BM ", cmd: MD$5;, justify: left }
-  - { text: "+ Mode\n-   FM ", cmd: MD$4;, justify: left }
-  - { text: "+ Mode\n-  DBTB", cmd: MD$6;, justify: left }
+#define mode_B_dropdown
+- item: group
+  label: Mode
+  contains:
+  - item: dropdownbutton
+    selections:
+    - { text: "  CW", cmd: MD$3; }
+    - { text: " USB", cmd: MD$2; }
+    - { text: " LSB", cmd: MD$1; }
+    - { text: "  AM", cmd: MD$5; }
+    - { text: "  FM", cmd: MD$4; }
+    - { text: "DATA", cmd: MD$6; }
 #end
 
-#define bw_B_cycle
-- item: cyclebutton
-  wraparound: true
-  updown: true
-  selections:
-  - { text: "+    BW\n-    50 Hz", cmd: BW$0005;, justify: left }
-  - { text: "+    BW\n-   100 Hz", cmd: BW$0010;, justify: left }
-  - { text: "+    BW\n-   200 Hz", cmd: BW$0020;, justify: left }
-  - { text: "+    BW\n-   300 Hz", cmd: BW$0030;, justify: left }
-  - { text: "+    BW\n-   400 Hz", cmd: BW$0040;, justify: left }
-  - { text: "+    BW\n-   450 Hz", cmd: BW$0045;, justify: left }
-  - { text: "+    BW\n-   500 Hz", cmd: BW$0050;, justify: left }
-  - { text: "+    BW\n-  1.8 kHz", cmd: BW$0180;, justify: left }
-  - { text: "+    BW\n-  2.5 kHz", cmd: BW$0250;, justify: left }
-  - { text: "+    BW\n-  3.5 kHz", cmd: BW$0350;, justify: left }
-  - { text: "+    BW\n-  4.0 kHz", cmd: BW$0400;, justify: left }
+#define bw_B_dropdown
+- item: group
+  label: BW
+  contains:
+  - item: dropdownbutton
+    selections:
+    - { text: "  50 Hz", cmd: BW$0005; }
+    - { text: " 100 Hz", cmd: BW$0010; }
+    - { text: " 200 Hz", cmd: BW$0020; }
+    - { text: " 300 Hz", cmd: BW$0030; }
+    - { text: " 400 Hz", cmd: BW$0040; }
+    - { text: " 450 Hz", cmd: BW$0045; }
+    - { text: " 500 Hz", cmd: BW$0050; }
+    - { text: "1.8 kHz", cmd: BW$0180; }
+    - { text: "2.5 kHz", cmd: BW$0250; }
+    - { text: "3.5 kHz", cmd: BW$0350; }
+    - { text: "4.0 kHz", cmd: BW$0400; }
+#end
+
+#define preamp_B_dropdown
+- item: group
+  label: Preamp
+  contains:
+  - item: dropdownbutton
+    selections:
+    - { text: "0", cmd: PA$00;, justify: left }
+    - { text: "1", cmd: PA$11;, justify: left }
+    - { text: "2", cmd: PA$21;, justify: left }
+    - { text: "3", cmd: PA$31;, justify: left }
+#end
+
+#define atten_B_dropdown
+- item: group
+  label: Atten
+  contains:
+  - item: dropdownbutton
+    selections:
+    - { text: " 0 dB", cmd: RA$000;, justify: left }
+    - { text: " 3 dB", cmd: RA$031;, justify: left }
+    - { text: " 6 dB", cmd: RA$061;, justify: left }
+    - { text: "12 dB", cmd: RA$121;, justify: left }
+    - { text: "15 dB", cmd: RA$151;, justify: left }
+    - { text: "18 dB", cmd: RA$181;, justify: left }
+#end
+
+#define rfgain_B_dropdown
+- item: group
+  label: RF Gain
+  contains:
+  - item: dropdownbutton
+    selections:
+    - { text: " -0 ", cmd: RG$-00; }
+    - { text: "-10 ", cmd: RG$-10; }
 #end
 
 #define VFOs_LINKED
@@ -254,80 +334,24 @@
 - item: cyclebutton
   wraparound: true
   selections:
-     - { text: "Test mode\n    on",  cmd: TS1;, bg: red }
-     - { text: "Test mode\n   off", cmd: TS0;,  }
+     - { text: "TX Test\n    on",  cmd: TS1;, bg: red }
+     - { text: "TX Test\n   off", cmd: TS0;,  }
 #end
 
-#define power_cycle
-- item: cyclebutton
-  updown: true
-  selections:
-  - { text: "+ POWER\n-      5 W", cmd: PC050L;, justify: left }
-  - { text: "+ POWER\n-     10 W", cmd: PC100L;, justify: left }
-  - { text: "+ POWER\n-     25 W", cmd: PC025H;, justify: left }
-  - { text: "+ POWER\n-     50 W", cmd: PC050H;, justify: left }
-  - { text: "+ POWER\n-     75 W", cmd: PC075H;, justify: left }
-  - { text: "+ POWER\n-    100 W", cmd: PC100H;, justify: left }
-#end
-
-#define preamp_A_cycle
-- item: cyclebutton
-  updown: true
-  selections:
-  - { text: "+ PREAMP \n-         0", cmd: PA00;, justify: left }
-  - { text: "+ PREAMP \n-         1", cmd: PA11;, justify: left }
-  - { text: "+ PREAMP \n-         2", cmd: PA21;, justify: left }
-  - { text: "+ PREAMP \n-         3", cmd: PA31;, justify: left }
-#end
-
-#define preamp_B_cycle
-- item: cyclebutton
-  updown: true
-  selections:
-  - { text: "+ PREAMP \n-         0", cmd: PA$00;, justify: left }
-  - { text: "+ PREAMP \n-         1", cmd: PA$11;, justify: left }
-  - { text: "+ PREAMP \n-         2", cmd: PA$21;, justify: left }
-  - { text: "+ PREAMP \n-         3", cmd: PA$31;, justify: left }
-#end
-
-#define atten_A_cycle
-- item: cyclebutton
-  updown: true
-  selections:
-  - { text: "+ ATTEN \n-    0 dB", cmd: RA000;RA$000;, justify: left }
-  - { text: "+ ATTEN \n-    3 dB", cmd: RA031;RA$031;, justify: left }
-  - { text: "+ ATTEN \n-    6 dB", cmd: RA061;RA$061;, justify: left }
-  - { text: "+ ATTEN \n-   12 dB", cmd: RA121;RA$121;, justify: left }
-  - { text: "+ ATTEN \n-   15 dB", cmd: RA151;RA$151;, justify: left }
-  - { text: "+ ATTEM \n-   18 dB", cmd: RA181;RA$181;, justify: left }
-#end
-
-#define atten_B_cycle
-- item: cyclebutton
-  updown: true
-  selections:
-  - { text: "+ ATTEN \n-    0 dB", cmd: RA$000;RA$000;, justify: left }
-  - { text: "+ ATTEN \n-    3 dB", cmd: RA$031;RA$031;, justify: left }
-  - { text: "+ ATTEN \n-    6 dB", cmd: RA$061;RA$061;, justify: left }
-  - { text: "+ ATTEN \n-   12 dB", cmd: RA$121;RA$121;, justify: left }
-  - { text: "+ ATTEN \n-   15 dB", cmd: RA$151;RA$151;, justify: left }
-  - { text: "+ ATTEM \n-   18 dB", cmd: RA$181;RA$181;, justify: left }
-#end
-
-#define rfgain_A_cycle
-- item: cyclebutton
-  wraparound: true
-  selections:
-  - { text: " RF GAIN \n  -0 ", cmd: RG-00;RG$-00; }
-  - { text: " RF GAIN \n -10 ", cmd: RG-10;RG$-10; }
-#end
-
-#define rfgain_B_cycle
-- item: cyclebutton
-  wraparound: true
-  selections:
-  - { text: " RF GAIN \n  -0 ", cmd: RG$-00;RG$-00; }
-  - { text: " RF GAIN \n -10 ", cmd: RG$-10;RG$-10; }
+#define power_dropdown
+- item: group
+  label: Power
+  contains:
+  - item: dropdownbutton
+    width: 6
+    unexpectedresponse: 'str(float(value[2:5])/10 if value[5] == "L" else float(value[2:5])/10000 if value[5] == "X" else float(value[2:5])) + " W"'
+    selections:
+    - { text: "  5 W", cmd: PC050L;, justify: left }
+    - { text: " 10 W", cmd: PC100L;, justify: left }
+    - { text: " 25 W", cmd: PC025H;, justify: left }
+    - { text: " 50 W", cmd: PC050H;, justify: left }
+    - { text: " 75 W", cmd: PC075H;, justify: left }
+    - { text: "100 W", cmd: PC100H;, justify: left }
 #end
 
 #define power_slider
